# MMDocIR-indexer-agent-retrieval-project

./: .env  .env.example  .gitignore  README.md  pyproject.toml
.agents/skills/retrieval-guidance/: SKILL.md
eval/: __init__.py  judges.py  metrics.py  reporting.ipynb  runner.py  schemas.py
eval/data/: dataset.jsonl
scripts/: qdrant_retrieval_smoke_test.py
src/app/: __init__.py
src/app/agent/: __init__.py  agent_results_parser.py  config.py  graph.py  llms.py
src/app/agent/prompts/: __init__.py  system.py
src/app/agent/retrieval/: __init__.py  domain_catalog.py  encoder.py  qdrant_search.py  rerank.py
src/app/agent/tools/: __init__.py  retrieval.py
src/app/server/: __init__.py  main.py
src/app/server/static/: index.html
src/indexer/: README.md  __init__.py  index_report.py  main.py
src/indexer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/indexer/encode/: __init__.py  colpali.py
src/indexer/flatten/: __init__.py  page_patches.py
src/indexer/insert/: __init__.py  milvus_schema.py  milvus_writer.py  qdrant_writer.py
src/indexer/load_docs/: __init__.py  domain_mapping.py  targets.py
src/indexer/render/: __init__.py  pdf_pages.py
src/indexer/shared/: __init__.py  config.py  errors.py  logging_utils.py  models.py  utils.py
src/indexer/validate/: __init__.py  inputs.py
tests/: test_agent_results_parser.py  test_app_domain_catalog.py  test_app_graph.py  test_app_server.py  test_colpali_encoder.py  test_domain_mapping.py  test_eval_judges.py  test_eval_metrics.py  test_eval_runner.py  test_flattening.py  test_indexing_validation.py  test_main.py  test_qdrant_search.py  test_qdrant_writer.py  test_retrieval_rerank.py  test_retrieval_tool.py
